src/generated/EsperandoParser.py
# Generated from ../Grammar/Esperando.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class EsperandoParser ( Parser ):

    grammarFileName = "Esperando.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'Saluton'", "'Adiau'", 
                     "'skribi'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "GREETING", 
                      "GOODBYE", "PRINT", "INT", "STRING", "WS", "NL" ]

    RULE_program = 0
    RULE_action = 1
    RULE_expr = 2
    RULE_printExpr = 3

    ruleNames =  [ "program", "action", "expr", "printExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    GREETING=3
    GOODBYE=4
    PRINT=5
    INT=6
    STRING=7
    WS=8
    NL=9

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GREETING(self):
            return self.getToken(EsperandoParser.GREETING, 0)

        def GOODBYE(self):
            return self.getToken(EsperandoParser.GOODBYE, 0)

        def EOF(self):
            return self.getToken(EsperandoParser.EOF, 0)

        def action(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(EsperandoParser.ActionContext)
            else:
                return self.getTypedRuleContext(EsperandoParser.ActionContext,i)


        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(EsperandoParser.NL)
            else:
                return self.getToken(EsperandoParser.NL, i)

        def getRuleIndex(self):
            return EsperandoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = EsperandoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 8
            self.match(EsperandoParser.GREETING)
            self.state = 11 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 11
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [5]:
                    self.state = 9
                    self.action()
                    pass
                elif token in [9]:
                    self.state = 10
                    self.match(EsperandoParser.NL)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 13 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==5 or _la==9):
                    break

            self.state = 15
            self.match(EsperandoParser.GOODBYE)
            self.state = 16
            self.match(EsperandoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def printExpr(self):
            return self.getTypedRuleContext(EsperandoParser.PrintExprContext,0)


        def getRuleIndex(self):
            return EsperandoParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction" ):
                return visitor.visitAction(self)
            else:
                return visitor.visitChildren(self)




    def action(self):

        localctx = EsperandoParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_action)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 18
            self.printExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(EsperandoParser.STRING, 0)

        def INT(self):
            return self.getToken(EsperandoParser.INT, 0)

        def getRuleIndex(self):
            return EsperandoParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = EsperandoParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            _la = self._input.LA(1)
            if not(_la==6 or _la==7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrintExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PRINT(self):
            return self.getToken(EsperandoParser.PRINT, 0)

        def expr(self):
            return self.getTypedRuleContext(EsperandoParser.ExprContext,0)


        def getRuleIndex(self):
            return EsperandoParser.RULE_printExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintExpr" ):
                listener.enterPrintExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintExpr" ):
                listener.exitPrintExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintExpr" ):
                return visitor.visitPrintExpr(self)
            else:
                return visitor.visitChildren(self)




    def printExpr(self):

        localctx = EsperandoParser.PrintExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_printExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(EsperandoParser.PRINT)
            self.state = 23
            self.match(EsperandoParser.T__0)
            self.state = 24
            self.expr()
            self.state = 25
            self.match(EsperandoParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





